# Py-PL0-Interpreter

./: README.md  lexer.py  main.py  pyproject.toml  requirements.txt
examples/: basic.pl0  everything.pl0  expression.pl0  identifier.pl0  nesting_proc.pl0  recursion.pl0
examples/problematic/: empty_proc.pl0  print_pc.pl0
pl0/: parser.py
src/pl0/: ast_interpreter.py  ast_node.py  ic_interpreter.py  icg.py  lexer.py  parser.py  src_lexer.py  src_parser.py  symboltable.py
tests/: context.py  test_lexer.py  test_parser.py
